<resources>
    <string name="app_name">Notes &amp; Count</string>
    <string name="app_name_contacts_list">Contacts List</string>
    <string name="app_name_one_splash_screen">NOTE</string>
    <string name="app_name_two_splash_screen">&amp;</string>
    <string name="app_name_three_splash_screen">COUNT</string>

    <string name="total_notes">Total notes:</string>
    <string name="image_descr">Empty list of notes</string>
    <string name="empty_list_text">There is nothing to show you.
        Please add new note by pressing green buttons below.</string>
    <string name="no_data">Please add both Sum and Name of operation</string>
    <string name="image_descr_no_contacts">No contacts</string>
    <string name="no_friends">Looks like your friends do not use our app yet…</string>

    <string name="open_nav_view">Open</string>
    <string name="close_nav_view">Close</string>

    <string name="hint_name">Note name</string>
    <string name="hint_text">Add text</string>
    <string name="hint_price">Add price</string>
    <string name="hint_message">Some hints for this note</string>

    <string name="btn_sign_in">Go</string>
    <string name="btn_register">Register</string>
    <string name="btn_add">Add</string>
    <string name="btn_group_note">Group note</string>
    <string name="btn_note">Note</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="btn_share">Share</string>
    <string name="btn_confirm">Confirm</string>

    <string name="dialog_title">Edit data</string>
    <string name="dialog_header">Type new data below</string>
    <string name="dialog_hint_name">Add new name here</string>
    <string name="dialog_hint_price">Add new sum here</string>

    <string name="task_title">Deleting Task!</string>
    <string name="task_message">You will lose all data of this task! Are you sure?</string>
    <string name="task_positive_btn">Yes</string>
    <string name="task_negative_btn">No</string>
    <string name="task_toast">Task Deleted</string>

    <string name="note_title">Deleting this Note!</string>
    <string name="note_message">You will lose all data in that Note! Are you sure?</string>
    <string name="note_positive_btn">Yes</string>
    <string name="note_negative_btn">No</string>
    <string name="note_toast">Note Deleted</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="user_name">Your name</string>
    <string name="user_phone">Your phone</string>
    <string name="plus">+</string>
    <string name="phone_starts">7</string>

    <string name="login_title">SIGN</string>
    <string name="login_sign_in">IN</string>
    <string name="login_sign_up">UP</string>
    <string name="login_separate">/</string>
    <string name="login_failed">Login failed</string>
</resources>