<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.login.LoginActivity">

        <LinearLayout
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|bottom"
                android:text="@string/login_title"
                android:textSize="42sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/login_sign_in"
                android:textSize="42sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal|bottom"
                android:text="@string/login_separate"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|bottom"
                android:text="@string/login_sign_up"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/navigation" />

    </RelativeLayout>
</layout>