<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="main_note"
            type="com.zivapp.notes.model.MainMenuNote" />

        <variable
            name="format"
            type="com.zivapp.notes.model.FormatSum" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_note_title_name"
                    style="@style/text_creation_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="Note name"
                    android:background="@drawable/edittext_toolbar"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:maxLength="20"
                    android:maxLines="2"
                    android:text="@{main_note.title}" />

                <TextView
                    android:id="@+id/tv_total_sum"
                    style="@style/text_creation_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{format.converted_sum}" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_creation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout_bottom"
            android:layout_below="@+id/toolbar" />

        <LinearLayout
            android:id="@+id/linearLayout_bottom"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_name_operation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/hint_text"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:maxLength="20" />

                <EditText
                    android:id="@+id/et_price_operation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/hint_price"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="9" />

            </LinearLayout>

            <Button
                android:id="@+id/button_add_new_item"
                style="@style/text_item_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/btn_add" />

        </LinearLayout>

    </RelativeLayout>

</layout>